# EM-Estacionamento-Inteligente

./: CMakeLists.txt  README.md  principal_iot.c
Html/: index.html
lib/: desenhosMatriz.h
